--- a/webapp/src/app/graph/page.module.css
+++ b/webapp/src/app/graph/page.module.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   flex: 1;
   overflow: hidden;
+  position: relative;
 }
 
 .body {
